# sdl2-demo

./: .clang-format  CMakeLists.txt  README.md  settings.json
src/: main.cpp
